# senatetrades

./: Dockerfile  README.md  processed_senators.json  pyproject.toml
congressmoney/: app.py  processed_senators.json
congressmoney/public/: index.html
congressmoney/static/assets/js/: charts-lines-daily.js  charts-lines.js  charts-pie-daily.js  charts-pie.js
congressmoney/templates/: base.html  dailysummary.html  dailysummarytable.html  dashboard.html  footer.html  head.html  home.html  mobilehamburger.html  mobilenav.html  navbar.html  noreturnsalert.html  searchinput.html  table.html  themetoggler.html
congressmoney/templates/pages/: about.html  dailysummary.html  dashboard.html  datascience.html
data/: process.py
tests/: test_congressmoney.py
