[tool.poetry]
name = "congressmoney"
version = "0.1.0"
description = "An open-source platform to promot financial transparency by making the stock trades and personal finances broadly accessible."
authors = ["George McCain <georgemccain88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
